sumo/tests/traci/ChangeTLValue/errors/UnknownTL/testclient_out.traci
TraCITestClient output file. Date: Sat Oct  9 00:16:19 2010


-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SetValue>:
  domID=194 varID=34 objID=xxx
.. Answered with error to command (194), [description: Traffic light 'xxx' is not known]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
